--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,9 @@
     <title>React App</title>
   </head>
   <body>
+    <script>
+      window.permanent_domain="howards-folly-wine.myshopify.com";
+    </script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
