Added other values for testing

--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,10 @@
   </head>
   <body>
     <script>
-      window.permanent_domain="howards-folly-wine.myshopify.com";
-      window.asset_url="https://howards-folly-wine.digitact.co.uk/";
+      //window.permanent_domain="howards-folly-wine.myshopify.com";
+      //window.asset_url="https://howards-folly-wine.digitact.co.uk/";
+      window.permanent_domain="winehub-demo.myshopify.com";
+      window.asset_url="https://wineclub-demo.digitact.co.uk/";
     </script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
