--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <body>
      <script>
       window.permanent_domain="winehub-demo.myshopify.com";
-      window.asset_url="https://wineclub-demo.digitact.co.uk/";
+      window.asset_url="https://wineclub-demo.digitact.co.uk";
     </script>
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
